# predictor-riesgo-desercion-unicatolica

./: .gitignore  README.md  pyproject.toml  requirements.txt
prediccion_desercion_unicatolica/docs/: conf.py
prediccion_desercion_unicatolica/docs/_build/doctrees/: environment.pickle  index.doctree
prediccion_desercion_unicatolica/docs/_build/html/: .buildinfo  .buildinfo.bak  genindex.html  index.html  objects.inv  search.html  searchindex.js
prediccion_desercion_unicatolica/docs/_build/html/_sources/: index.rst.txt
prediccion_desercion_unicatolica/models/: modelo_arboles_de_decision.pkl  modelo_knn.pkl  modelo_regresion_logistica.pkl  modelo_svm.pkl
prediccion_desercion_unicatolica/notebooks/: analisis_datos.ipynb  arboles_de_decision.ipynb  knn.ipynb  regresion_logistica.ipynb  svm.ipynb
prediccion_desercion_unicatolica/src/data/: modulo_1.sql  modulo_2.sql  modulo_3.sql  modulo_4.sql  modulo_5.sql  modulo_6.py  modulo_SQL.py
prediccion_desercion_unicatolica/test/: prueba_regresion_logistica.ipynb
