[project]
name = "predictor-desercion-unicatolica"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "anfeMurillo", email = "anfehumu2.0@hotmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "cookiecutter>=2.6.0",
    "git-filter-repo",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
